--- a/src/app/creator/creator.component.html
+++ b/src/app/creator/creator.component.html
@@ -2,6 +2,9 @@
 <div class="container-fluid">
   <br>
   <div class="row">
+    <div> Bienvenido {{course.professor}}, puede comenzar a diseñar su curso de {{course.courseName}}</div>
+  </div>
+  <div class="row">
     <div class="col-md-4" >
       <h3 class="title"> APERTURA</h3>
       <h4 class="subtitle"><span class="badge badge-default badge-pill">1</span> Introducción</h4>
