--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,3 +12,20 @@
 .full{
     
 }
+
+.ng-valid[required], .ng-valid.required  {
+    border-left: 5px solid #42A948; /* green */
+  }
+  
+  .ng-invalid:not(form)  {
+    border-left: 5px solid #a94442; /* red */
+  }
+
+  .ng-valid > button {
+    transition: ease-in-out .15s;
+      background-color: green;
+  }
+.ng-invalid > button {
+    transition: ease-in-out .15s;
+    background-color: red;
+}
