--- a/src/app/publish/publish.component.html
+++ b/src/app/publish/publish.component.html
@@ -1,3 +1,56 @@
-<p>
-  publish works!
-</p>
+
+<div class="container" >
+    <!--NAVBAR-->
+      <nav class="mx-auto navbar navbar-light bg-light justify-content-left">
+          <a routerLink="/creator" class="btn btn-outline-primary my-2 my-sm-0" >Regresar</a>
+      </nav>
+      <!--Content-->
+      <div class="container" id="container">
+         <!--Head--> 
+         <div class="row">
+         <div class="col-md-12 elemento espeis">  
+            <div class="col-md-12 ">
+              <h1 class="display-3">{{course.courseName}} </h1>
+              <hr>
+              <h2 class="display-5"><small> creado por:</small> {{course.professor}} </h2>
+            </div>
+          </div>
+        </div>
+        </div>
+        
+      <!--Survey-->
+      <div class="col-md-12 loffset text-center">
+          <h2>Aqui termina tu curso!</h2>
+          <br>
+          <h5>Tomate unos minutos para contestar esta breve encuesta </h5>
+          <br>
+          <button class="btn btn-outline-secondary" href="">Ir a la encuesta</button>
+          <hr>
+      </div>
+      <!--Footer section-->
+          <div class="fixed-bottom text-white border border-bottom-0 border-right-0 border-left-0  border-light creatfoot container-fluid">
+              <div class="row">
+                <div class="col-md-6">
+                  <br>
+                  <p class="credi2">AV. EUGENIO GARZA SADA 2501 SUR COL. TECNOLÓGICO C.P. 64849 | MONTERREY, NUEVO LEÓN, MÉXICO |<br> TEL. +52 (81) 8358-2000 D.R.© INSTITUTO TECNOLÓGICO Y DE ESTUDIOS SUPERIORES DE MONTERREY, MÉXICO. 2017</p>
+                </div>
+                <div class="col-md-6">
+                    <ul class="nav justify-content-end credi3 ">
+                        <li class="nav-item">
+                          <a class="nav-link active" href="#http://tec.mx/es/aviso-legal"> <b> Aviso Legal </b></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="http://tec.mx/es/politicas-de-privacidad-del-tecnologico-de-monterrey"> <b> Politicas de privacidad</b></a>
+                        </li>
+                        <li class="nav-item">
+                          <a class="nav-link" href="http://tec.mx/es/avisos-de-privacidad"> <b> Avisos de Privacidad </b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="http://tec.mx/es/sobre-el-sitio"> <b>Sobre el sitio</b></a>
+                          </li>
+                       
+                      </ul>
+                  </div> 
+                </div>
+            </div>
+
