--- a/src/app/creator/creator.component.css
+++ b/src/app/creator/creator.component.css
@@ -1,22 +1,62 @@
+.dashboardbg{
+    background: url('/assets/icons/CreatorBG.png');
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    padding: 40px;
+}
+.creatfoot{
+    background-color: #0F0F0F;
+    background-size: cover;
+    width: 100%;
+    min-height: auto;
+    padding-top: 20px;
+}
+
+.appbg{
+    padding: 60px;
+    background-color: #777;
+    min-height:30vh;
+}
+
+.separa2{
+    margin-right: 40px;
+}
+
 .drag-unit {
-    width: 80px;
-    height: 80px;
+    width: 120px;
+    height: 120px;
     margin: 10px;
     display: inline-block;
     cursor: pointer;
     text-align: center;
     
 }
+
+.credi2{
+    font-size: x-small;
+    padding-left: 50px;
+}
+
+.credi3{
+    font-size: small;
+    padding-right: 50px;
+}
+
+  .creatfoot{
+    background-color: #0F0F0F;
+    background-size: cover;
+    width: 100%;
+    min-height: auto;
+    padding-top: 20px;
+}
+
+
 .container-bag {
     width: 100%;
     height: 200px;
     border: solid black;
     margin-bottom: 50px;
-}
-
-.mother {
-    text-align: center;
-    background-color: #727272;
 }
 
 .title{
@@ -35,7 +75,7 @@
 }
 
 .contain{
-    height: 500px;
+    height: 580px;
     background-color:#ececec; 
     padding:10px; 
     font-size:16px;
@@ -46,17 +86,6 @@
     background-color:#ececec; 
 }
 
-.number {
-    display: inline-block;
-    min-width: 10px;
-    padding: 3px 7px;
-    font-size: 12px;
-    font-weight: bold;
-    line-height: 1;
-    color: #fff;
-    text-align: center;
-    white-space: nowrap;
-    vertical-align: baseline;
-    background-color: #777;
-    border-radius: 10px;
-  }
+.visible{
+    display: none;
+}
