--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,20 +1,35 @@
+@import "https://fonts.googleapis.com/css?family=Helvetica:300,400,500,600,700";
+
 .fondo{
     background: url('/assets/icons/bg.png');
-    background-repeat: repeat-x;
+    background-size: cover;
     width: 100%;
-    height: 800px;
-    color: #ffffff;
-    padding: 10px;
-    
-
+    height: 100%;
+    padding: 80px;
+}
+.sideOne{
+  min-height: 100vh;
+}
+.sideTwo{
+  min-height: 100vh;
 }
 
-.full{
-    
+.start{
+  margin-top: 300px;
+  background-color: #ffffff;
+  border-radius: 20px;
+  max-width: 600px;
+  height: auto;
 }
 
 .ng-valid[required], .ng-valid.required  {
     border-left: 5px solid #42A948; /* green */
+    
+  }
+
+  .named{
+    
+    color:#ED9039;
   }
   
   .ng-invalid:not(form)  {
@@ -24,8 +39,62 @@
   .ng-valid > button {
     transition: ease-in-out .15s;
       background-color: green;
+      width: 200px;
+      height: 40px;
   }
+
 .ng-invalid > button {
     transition: ease-in-out .15s;
     background-color: red;
+    border-color:red;
+    width: 200px;
+    height: 40px;
+    
+}
+.margin{
+  padding-bottom: 20px;
+}
+
+.footer {
+
+  bottom: 0;
+  width: 100%;
+  height: auto; /* Set the fixed height of the footer here */
+  line-height: 60px; /* Vertically center the text there */
+  background-color: #f5f5f5;
+}
+
+.navbar{
+  height: 220px;
+
+}
+
+.center{
+  height:20px; position:relative; margin: -20px -50px; width:100px; top:50%; left:35%;
+}
+
+.logo{
+  
+  width: 180px;
+  height: auto;
+}
+
+.offset{
+  margin-top: 150px;
+  margin-bottom: 150px;
+}
+
+offset2{
+  margin-top: 20px;
+  margin-bottom: 150px;
+}
+
+.offset3{
+  margin-top: 80px;
+  margin-bottom: 10px;
+}
+
+.ideafoot{
+  width:120px;
+
 }
