--- a/src/app/creator/creator.component.css
+++ b/src/app/creator/creator.component.css
@@ -6,7 +6,7 @@
     padding: 40px;
 }
 .creatfoot{
-    background-color: #0F0F0F;
+    background-color: rgb(47, 52, 68);
     background-size: cover;
     width: 100%;
     min-height: auto;
@@ -14,8 +14,8 @@
 }
 
 .appbg{
-    padding: 60px;
-    background-color: #777;
+    padding: 10px;
+    background-color: #D8DEE5;
     min-height:30vh;
 }
 
@@ -77,7 +77,7 @@
 .contain{
     height: 580px;
     background-color:#ececec; 
-    padding:10px; 
+    
     font-size:16px;
 }
 
@@ -89,3 +89,97 @@
 .visible{
     display: none;
 }
+
+.publicar{
+    margin-left: 30px;
+    width: 150px;
+    font-weight: bold;
+    color:#ffff;
+}
+
+.credi2{
+    font-size: x-small;
+    padding-left: 50px;
+}
+
+.credi3{
+    font-size: small;
+    padding-right: 50px;
+}
+
+
+.head{
+    width: auto;
+    height: auto;
+    
+}
+
+.elemento{
+    border-radius: 8px;
+    margin: 20px;
+    
+}
+
+.margin{
+    margin: 10px;
+    
+}
+.button {
+    position: absolute;
+    right: 10%;
+    margin: 10px;
+}
+
+.upload-drop-zone {
+    color: #ccc;
+    border-style: dashed;
+    border-color: rgb(182, 182, 182);
+    line-height: 200px;
+    text-align: center
+  }
+
+  .upload-drop-zone {
+    margin-top: 40px;
+    height: 200px;
+    border-width: 2px;
+    margin-bottom: 20px;
+  }
+  
+  .idea{
+    width: 80px;
+    height: auto;
+    
+  }
+
+  .espeis{
+    margin-top: 50px;
+    margin-bottom: 150px;
+  }
+  .flipbookv{
+    width: 100%;
+    height: 40vh;
+  }
+
+  .creatfoot{
+    background-color: #0F0F0F;
+    background-size: cover;
+    width: 100%;
+    min-height: auto;
+    padding-top: 20px;
+}
+
+.credi2{
+    font-size: x-small;
+    padding-left: 50px;
+}
+
+.credi3{
+    font-size: small;
+    padding-right: 50px;
+}
+
+.loffset{
+    margin-top: 60px;
+    margin-bottom: 120px;
+}
+
