--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,11 +1,9 @@
 <div class="row">
   <!-- Side One-->
     <div class="col-xl-6 fondo sideOne">
-  
         <div class="container  jumbotron start">
             <h1 class="text-center">Crea tu curso</h1>
             <hr>
-    
             <form (ngSubmit)="onSubmit()" #courseForm="ngForm">
               <div class="form-group">
                 <h3>
@@ -44,35 +42,34 @@
                 <br>
                 <br>
                 <h1 class="display-4">PLANN<strong class="named">ED</strong></h1>
-                <br>
+                
                 <p class="lead">Una herramienta para agilizar la planeación de cursos digitales</p>
+                <br>
+                <div class="col-md-12 text-center">
+                    <p class="lead"><b>Creado por</b></p>
+                    <img src="./assets/icons/images/idea_logo.png" class="ideafoot" alt="">
+                </div>
               </div>
             </div>
             
           <div class="row offset2">
             <div class="col-md-4 text-center">
-                <img src="./assets/icons/images/1.png" class="logo rounded mx-auto"alt="">
+                <img src="./assets/icons/images/1.png" class="logo mx-auto"alt="">
                 <h2>Crea</h2>
               </div>
             
               <div class="col-md-4 text-center">
-                  <img src="./assets/icons/images/2.png" class="logo rounded mx-auto"alt="">
+                  <img src="./assets/icons/images/2.png" class="logo mx-auto"alt="">
                   <h2>Diseña</h2>
                 </div>
             
               <div class="col-md-4 text-center">
-                  <img src="./assets/icons/images/3.png" class="logo rounded mx-auto"alt="">
+                  <img src="./assets/icons/images/3.png" class="logo mx-auto"alt="">
                   <h2>Publica</h2>
                 </div>
             </div>
           </div>
-  
-          <div class="row offset3">
-            <div class="col-md-12 text-center">
-              <p class="lead">Creado por</p>
-              <img src="./assets/icons/images/idea_logo.png" class="ideafoot" alt="">
-          </div>
-        </div>
+
     </div>
   <!-- -->
   </div>
