--- a/src/app/publish/publish.component.css
+++ b/src/app/publish/publish.component.css
@@ -74,17 +74,17 @@
     background-size: cover;
     width: 100%;
     min-height: auto;
-    padding-top: 20px;
+    padding-top: 10px;
 }
 
 .credi2{
-    font-size: x-small;
-    padding-left: 50px;
+    font-size: xx-small;
+    padding-left: 10px;
 }
 
 .credi3{
-    font-size: small;
-    padding-right: 50px;
+    font-size: xx-small;
+    padding-right: 20px;
 }
 
 .loffset{
