--- a/src/app/creator/creator.component.html
+++ b/src/app/creator/creator.component.html
@@ -15,7 +15,7 @@
                       <a (click)="toPublish()" class="btn btn-outline-success publicar text-white" >Publicar</a>
                   </li>
                   <li class="nav-item">
-                      <a (click)="toPublish()" class="btn btn-outline-warning publicar text-white" >Demo</a>
+                      <a href="./assets/demo.html" target="_blank" class="btn btn-outline-warning publicar text-white" >Demo</a>
                   </li>
                   
               </ul>   
