--- a/src/app/publish/publish.component.html
+++ b/src/app/publish/publish.component.html
@@ -28,6 +28,7 @@
           <h5>Tomate unos minutos para contestar esta breve encuesta </h5>
           <br>
           <a class="btn btn-outline-secondary"  href="https://heriberto6.typeform.com/to/k6AYqW" target="_blank">Ir a la encuesta</a>
+          <a class="btn btn-outline-success"  [routerLink]="['/home']" target="_blank">Crear otro Curso</a>
           <hr>
       </div>
       <!--Footer section-->
