--- a/src/app/creator/creator.component.html
+++ b/src/app/creator/creator.component.html
@@ -86,7 +86,7 @@
                 <div class="media offset espeis visible" alt="flipbook">
                     <img src="./assets/icons/flipbook.svg" class="icon" alt="">
                     <div class="media-body ">
-                        <object type="text/html" data="https://cursoste.tecvirtual.mx/cursos/dct/documentacion/eel/diplomados/images/flipbook/finanzas/index.html#book5/page4-page5" class="flipbookv">
+                        <object type="text/html" data="http://cursoste.tecvirtual.mx/cursos/dct/documentacion/eel/diplomados/images/flipbook/finanzas/index.html#book5/page4-page5" class="flipbookv">
                         </object> 
                     </div>
                   </div>
