--- a/src/app/creator/creator.component.html
+++ b/src/app/creator/creator.component.html
@@ -81,7 +81,7 @@
                 </div>
               <!---->
             </div>
-            <!--FLIPBOOK-->
+            <!--FLIPBOOK-
             <div class=" drag-unit flipbook ">
                 <div class="media offset espeis visible" alt="flipbook">
                     <img src="./assets/icons/flipbook.svg" class="icon" alt="">
